--- a/client/src/pages/Pricelist.css
+++ b/client/src/pages/Pricelist.css
@@ -1,9 +1,6 @@
-
-
 .table-container {
     width: 100%;
-    height: 70vh; /* Adjust height as needed */
-    /* padding: 0 16px; */
+    height: 70vh; 
     box-sizing: border-box;
     overflow: auto;
 }
@@ -13,13 +10,6 @@
     box-sizing: border-box; 
 }
 
-/* .price-list-page {
-    width: 100%;
-    min-height: 100vh;
-    background-color: #f9f9f9;
-    padding: 20px 0;
-    box-sizing: border-box;
-} */
 
 .table-header{
     text-align: left;
